# paint

./: .gitmodules  CMakeLists.txt  graphics.md  graphics_system.cpp  main.cpp  more.md  names.md  old.md  readme.md  todo.md
include/paint/: actions.h  application.h  brush.h  cache.h  camera.h  canvas.h  events.h  graph.h  graphics_system.h  input_system.h  main_window.h  nodes.h  orchestrator.h  render.h  tool.h  utils.h  worker.h
include/paint/brush_engine/: brush_engine.h  stamp_push_constant.h
include/paint/canvas/: canvas.h  canvas_data.h  canvas_window.h  layer.h
include/paint/layer_engine/: layer_engine.h
include/paint/panels/: brush_panel.h  brushes_panel.h  colors_panel.h  layer_panel.h  layers_panel.h  message_panel.h
include/paint/render_system/: camera.h  dirty_flag.h  dirty_flags.h  render_system.h  render_worker.h  tile.h
include/paint/render_system/cache/: action_data_cache.h  brush_stroke_data_cache.h  data_cache.h
include/paint/render_system/frame_graph/: brush_stroke_event.h  brush_stroke_node.h  camera_event.h  camera_node.h  event.h  frame_graph.h  frame_graph_builder.h  layer_event.h  layer_node.h  node.h
include/paint/tool_system/: brush_tool.h  tool.h  tool_system.h  tool_system_config.h  zoom_tool.h
include/paint/tool_system/actions/: action.h  action_buffer.h  action_data.h  action_state.h  brush_point.h  brush_stroke.h  brush_stroke_data.h
resources/: frag.spv  layer_frag.spv  layer_vert.spv  vert.spv
resources/shaders/: debug_frag.spv  debug_vert.spv  flat_layer_frag.spv  shader_frag.spv  texture_stamp_frag.spv  texture_stamp_vert.spv
resources/styles/: global.qss
scripts/: compile.sh  compile_shaders.sh  readme.md  run.sh
src/: actions.cpp  application.cpp  brush.cpp  cache.cpp  canvas.cpp  events.cpp  graph.cpp  graphics_system.cpp  input_system.cpp  main_window.cpp  nodes.cpp  render.cpp  tool.cpp  utils.mm  window.cpp  worker.cpp
src/brush_engine/: brush_engine.cpp
src/canvas/: canvas_window.cpp
src/layer_engine/: layer_engine.cpp
src/render_system/: render_system.cpp  render_worker.cpp
src/render_system/frame_graph/: brush_stroke_event.cpp  brush_stroke_node.cpp  camera_event.cpp  camera_node.cpp  frame_graph.cpp  frame_graph_builder.cpp  layer_event.cpp  layer_node.cpp
src/shaders/: brush_shader.frag  brush_shader.vert  layer_shader.frag  layer_shader.vert  shader.frag  shader.vert
src/shaders/brushes/: debug.frag  debug.vert  global.qss  texture_stamp.frag  texture_stamp.vert
src/shaders/layers/: default_layer.frag  flat_layer.frag  flat_layer.vert
src/tool_system/: brush_tool.cpp  tool.cpp  tool_system.cpp  zoom_tool.cpp
src/tool_system/actions/: brush_stroke.cpp
